# foo-service

./: .env  Cargo.toml  compose.yaml
migrations/2025-11-04-221542_create_tasks/: down.sql  up.sql
src/: handlers.rs  main.rs  models.rs  processor.rs  schema.rs  sharding.rs
