[package]
name = "foo-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "2.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.3", features = ["postgres"] }
dotenvy = "0.15.7"
fastrand = "2.3.0"
futures-util = "0.3.31"
http = "1.3.1"
# pq-sys = { version = "0.6", features = ["bundled"] }
reqwest = "0.12.24"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.17"
